Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ html {
   }
   .Skills {
     margin: 0 0 2em 0 !important;
-    padding: 0.5em !important;
+    padding: 0.2em !important;
   }
   .Skill {
     margin: 0.5em !important;
